@@ -10,3 +10,5 @@ services:
 
   Cobweb\SvconnectorCsv\Service\ConnectorCsv:
     public: true
+    arguments:
+      - !tagged_iterator connector.service
